--- a/02college/index.html
+++ b/02college/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
 </head>
 <body>
     <header id="header">
         <div class="headerTop">
+            <div class="topWrap clearfix">
             <ul class="clearfix" id="topleft">
                 <li><a href="#">대학교</a></li>
                 <li><a href="#">입학안내</a></li>
@@ -18,27 +22,29 @@
             </ul>
             <ul class="clearfix" id="topright">
                 <li><a href="#">글자크기</a></li>
+                <li><a href="#">+</a><a href="#">-</a></li>
                 <li><a href="#">찾아오시는길</a></li>
                 <li><a href="#">ENGLISH</a></li>
                 <li><a href="#">사이트맵</a></li>
             </ul>
         </div>
-            <h1><a href="#">한국대학교</a></h1>
-            <ul>
+    </div>
+    <div class="bottomWrap clearfix">
+        <div class="logo">
+            <a href="#"><img src="images/logo.png" alt=""></a>
+        </div>
+        <div class="Mainmenu">
+            <ul class="clearfix" id="menu">
                 <li><a href="#">대학소개</a></li>
                 <li><a href="#">학과소개</a></li>
                 <li><a href="#">학사안내</a></li>
                 <li><a href="#">대학생활</a></li>
                 <li><a href="#">학생지원센터</a></li>
             </ul>
+        </div>
+        </div>
     </header>
     <div id="content">
-        <div class="bgimg"><img src="../im" alt="">
-        <div class="txt">
-        <h2>함께 나누며 세상을 이끌어</h2>
-        <h1>세계로향하는 한국대학교</h1>
     </div>
-    </div>
-</div>
 </body>
 </html>
