--- a/02college/index.html
+++ b/02college/index.html
@@ -65,13 +65,26 @@
             <ul class="clearfix">
                 <li>
                     <ul class="slider1">
-                        <li><img src="images/slide.png" alt=""></li>
-                        <li><img src="images/slide2.png" alt=""></li>
-                        <li><img src="images/slide3.png" alt=""></li>
+                        <li><img src="images/slide.png" alt="">
+                            <div class="txt">한국에서<br>시작하는<br>새로운 꿈<br>
+                            <button type="button">자세히보기▶</button>
+                            </div></li>
+                        <li><img src="images/slide2.png" alt="">
+                            <div class="txt">한국에서<br>시작하는<br>새로운 꿈<br>
+                                <button type="button">자세히보기▶</button></div></li>
+                        <li><img src="images/slide3.png" alt="">
+                            <div class="txt">한국에서<br>시작하는<br>새로운 꿈<br>
+                                <button type="button">자세히보기▶</button></div></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#"><img src="images/bg2.png" alt=""></a>
+                <li class="yellowbg">
+                    <a href="#"><img src="images/bg2.png" alt="">
+                        <div class="txt">
+                            <h1>APP으로<br>스마트 도서관<br>바로이용하자!</h1>
+                            <p>모바일 열람층은 <br>도서관 자료실 도서대출을 통해 <br>사용 할 수 있습니다.</p>
+                            <button type="button">자세히보기▶</button>
+                        </div>
+                    </a>
                 </li>
                 <li>
                     <h3>HOT LINK</h3>
@@ -81,11 +94,11 @@
                             <h4>국제교류<br>센터</h4>
                         </a></li>
                         <li><a href="#">
-                            <img src="" alt="">
+                            <img src="images/link2.png" alt="">
                             <h4>원격지원<br>시스템</h4>
                         </a></li>
                         <li><a href="#">
-                            <img src="" alt="">
+                            <img src="images/link3.png" alt="">
                             <h4>예산/결산<br>공고</h4>
                         </a></li>
                     </ul>
@@ -134,8 +147,19 @@
                         <li><img src="images/banner02.png" alt=""></li>
                     </ul>
                 </li>
+                
             </ul>
         </div>
     </div>
+    <footer id="footer">
+        <ul class="clearfix">
+            <li><a href="#">회사소개</a></li>
+            <li><a href="#">한국대학교</a></li>
+            <li><a href="#">개인정보취급방침</a></li>
+            <li><a href="#">이용정책</a></li>
+            <li><a href="#">입점/제휴문의 및 광고</a></li>
+            <li><a href="#">이메일 무단수집거부</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
