--- a/02college/index.html
+++ b/02college/index.html
@@ -128,6 +128,7 @@
                 </li>
                 <li class="clearfix">
                     <h3>SNS NEWS</h3>
+                    <div class="newsWrap">
                     <ul class="news">
                         <li><a href="#"><img src="images/학교01.jpg" alt=""></a></li>
                         <li><a href="#"><p>한국 대학교는 2017학년도 신입생 입학식을 3월 2일(목) 본교 종합체육관 ...</p></a></li>
@@ -138,8 +139,13 @@
                         <li><a href="#"><img src="images/sns3.png" alt=""></a></li>
                         <li><a href="#"><img src="images/sns4.png" alt=""></a></li> 
                     </ul>
+                </div>
                 </li>
-                <li>6</li>
+                <li>
+                    <div class="txt">
+                    <h3>캠퍼스 투어</h3>
+                </div>
+                </li>
                 <li>7</li>
                 <li>
                     <ul class="slider2">
