--- a/02college/index.html
+++ b/02college/index.html
@@ -146,11 +146,24 @@
                     <h3>캠퍼스 투어</h3>
                 </div>
                 </li>
-                <li>7</li>
+                <li><img src="images/play.png" alt=""></li>
                 <li>
                     <ul class="slider2">
-                        <li><img src="images/banner01.png" alt=""></li>
-                        <li><img src="images/banner02.png" alt=""></li>
+                        <li>
+                            <img src="images/banner01.png" alt="">
+                            <div class="txt">
+                                <h2>2017년 신ㆍ편입생 2차 모집</h3>
+                                <h1>2017.7.1 ~ 7.10</h1>
+                                <button type="button">입학사전예약▶</button>
+                            </div>
+                    </li>
+                        <li><img src="images/banner02.png" alt="">
+                            <div class="txt">
+                                <h3>2017년 신ㆍ편입생 2차 모집</h3>
+                                <h1>2017.7.1 ~ 7.10</h1>
+                                <button type="button">입학사전예약▶</button>
+                            </div>
+                        </li>
                     </ul>
                 </li>
                 
