--- a/02college/index.html
+++ b/02college/index.html
@@ -169,6 +169,14 @@
                 
             </ul>
         </div>
+        <div class="bottom">
+            <ul class="clearfix">
+                <li>학사일정</li>
+                <li>〈 2016 07 〉</li>
+                <li>2016ㆍ1학기 성적 열람 및 상담 신청</li>
+                <li>성적열람및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
+            </ul>
+        </div>
     </div>
     <footer id="footer">
         <ul class="clearfix">
