--- a/02college/index.html
+++ b/02college/index.html
@@ -66,7 +66,8 @@
                 <li>
                     <ul class="slider1">
                         <li><img src="images/slide.png" alt="">
-                            <div class="txt">한국에서<br>시작하는<br>새로운 꿈<br>
+                            <div class="txt">
+                                한국에서<br>시작하는<br>새로운 꿈<br>
                             <button type="button">자세히보기▶</button>
                             </div></li>
                         <li><img src="images/slide2.png" alt="">
@@ -146,7 +147,7 @@
                     <h3>캠퍼스 투어</h3>
                 </div>
                 </li>
-                <li><img src="images/play.png" alt=""></li>
+                <li><a href=""><img src="images/play.png" alt=""></a></li>
                 <li>
                     <ul class="slider2">
                         <li>
@@ -178,6 +179,7 @@
             </ul>
         </div>
     </div>
+
     <footer id="footer">
         <ul class="clearfix">
             <li><a href="#">회사소개</a></li>
