--- a/02college/index.html
+++ b/02college/index.html
@@ -147,7 +147,7 @@
                     <h3>캠퍼스 투어</h3>
                 </div>
                 </li>
-                <li><a href=""><img src="images/play.png" alt=""></a></li>
+                <li><a href="https://www.youtube.com/embed/YZ5PG07lTZI"><img src="images/play.png" alt=""></a></li>
                 <li>
                     <ul class="slider2">
                         <li>
@@ -176,7 +176,14 @@
                 <li>〈 2016 07 〉</li>
                 <li>2016ㆍ1학기 성적 열람 및 상담 신청</li>
                 <li>성적열람및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
+                <div class="arrow">
+                    <ul>
+                        <li><img src="images/toparrow.png" alt=""></li>
+                        <li><img src="images/underarrow.png" alt=""></li>
+                    </ul>
+                </div>
             </ul>
+            
         </div>
     </div>
 
