--- a/02college/index.html
+++ b/02college/index.html
@@ -196,6 +196,12 @@
             <li><a href="#">입점/제휴문의 및 광고</a></li>
             <li><a href="#">이메일 무단수집거부</a></li>
         </ul>
+        <div class="txt">
+            대표자:홍길동 서울특별시 구로구 구로로 300 (구로동 6가)&nbsp;&nbsp;&nbsp;사업자동륵번호: 123-56-7890234
+            <br>통신판매업 신고번호:제 1234-서울-구로구-1004호 개인정보 관리 책임자:홍길동&nbsp;&nbsp;&nbsp;소비자피해보상보험<br>
+            고객센터:1234-5678&nbsp;&nbsp;FAX:02-1234-5678&nbsp;&nbsp;HANGUK.COM <br>
+            COPYRIGHT ⓒ HANGUK. ALL RIGHTS RESERVED.
+        </div>
     </footer>
 </body>
 </html>
