--- a/02college/index.html
+++ b/02college/index.html
@@ -129,12 +129,12 @@
                 </li>
                 <li class="clearfix">
                     <h3>SNS NEWS</h3>
-                    <div class="newsWrap">
+                    <div class="newsWrap clearfix">
                     <ul class="news">
                         <li><a href="#"><img src="images/학교01.jpg" alt=""></a></li>
                         <li><a href="#"><p>한국 대학교는 2017학년도 신입생 입학식을 3월 2일(목) 본교 종합체육관 ...</p></a></li>
                     </ul>
-                    <ul class="sns">
+                    <ul class="sns clearfix">
                         <li><a href="#"><img src="images/sns1.png" alt=""></a></li>
                         <li><a href="#"><img src="images/sns2.png" alt=""></a></li>
                         <li><a href="#"><img src="images/sns3.png" alt=""></a></li>
@@ -178,8 +178,8 @@
                 <li>성적열람및 상담신청은 본인이 수강한 교과목 설문조사를 모두 마친 후 확인이...</li>
                 <div class="arrow">
                     <ul>
-                        <li><img src="images/toparrow.png" alt=""></li>
-                        <li><img src="images/underarrow.png" alt=""></li>
+                        <li><a href="#"><img src="images/toparrow.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/underarrow.png" alt=""></a></li>
                     </ul>
                 </div>
             </ul>
