--- a/02college/index.html
+++ b/02college/index.html
@@ -66,13 +66,26 @@
     </header>
     <div id="contents">
         <section class="title">
-            <div class="txt">
+        <div class="txt">
             <h3>함께 나누며 세상을 이끌어</h3><br>
             <h1>세계로향하는 한국대학교</h1>
         </div>
         <div class="icon">
-            <img src="images/icon.png" alt="">
-        </div>
+                <ul class="clearfix">
+                    <li>
+                        <a href="#"><img src="images/icon1.png" alt=""></a>
+                        <p>입학절차안내</p></li>
+                    <li>
+                        <a href="#"><img src="images/icon2.png" alt=""></a>
+                        <p>입학설명회</p></li>
+                    <li>
+                        <a href="#"><img src="images/icon3.png" alt=""></a>
+                        <p>장학제도</p></li>
+                    <li>
+                        <a href="#"><img src="images/icon4.png" alt=""></a>
+                        <p>증명서발급</p></li>
+                </ul>
+            </div>
         </section>
         <div class="container">
             <ul class="clearfix">
@@ -199,7 +212,6 @@
             
         </div>
     </div>
-
     <footer id="footer">
         <ul class="clearfix">
             <li><a href="#">회사소개</a></li>
