--- a/02college/index.html
+++ b/02college/index.html
@@ -20,11 +20,9 @@
         $(document).ready(function(){
             $(".slider1").bxSlider({
                 auto:true,
-                pager:false,
                 control:false,
             });
             $(".slider2").bxSlider({
-                pager:false,
                 auto:true,
                 control:false
             });
@@ -155,18 +153,18 @@
                 </li>
                 <li class="clearfix">
                     <h3>SNS NEWS</h3>
-                    <div class="newsWrap clearfix">
-                    <ul class="news">
-                        <li><a href="#"><img src="images/학교01.jpg" alt=""></a></li>
-                        <li><a href="#"><p>한국 대학교는 2017학년도 신입생 입학식을 3월 2일(목) 본교 종합체육관 ...</p></a></li>
-                    </ul>
+                    <div class="news">
+                        <div class="img">
+                        <a href="#"><img src="images/학교01.jpg" alt=""></a>
+                    </div>
+                        <div class="txt"><p>한국 대학교는 2017학년도 신입생 입학식을 3월 2일(목) 본교 종합체육관 ...</p></div>
+                    </div>
                     <ul class="sns clearfix">
                         <li><a href="#"><img src="images/sns1.png" alt=""></a></li>
                         <li><a href="#"><img src="images/sns2.png" alt=""></a></li>
                         <li><a href="#"><img src="images/sns3.png" alt=""></a></li>
                         <li><a href="#"><img src="images/sns4.png" alt=""></a></li> 
                     </ul>
-                </div>
                 </li>
                 <li>
                     <div class="txt">
