--- a/03traval/index.html
+++ b/03traval/index.html
@@ -5,23 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>travel</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header id="header">
         <div class="hdTop">
-            <h1><a href="#">logo</a></h1>
-            <div class="search">search</div>
-            <div class="util">
-                <ul>
-                    <li><a href="#">+82 0212345678</a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                    <li><a href="#"><img src="" alt=""></a></li>
-                </ul>
-            </div>
+            <h1><a href="#">로고</a></h1>
+            <div class="search">검색</div>
+            <div class="util">유틸</div>
         </div>
-        <div class="hdBottom">
-            <ul>
+        <div class="hdBtm">
+            <ul class="clearfix">
                 <li><a href="#">여행도시</a></li>
                 <li><a href="#">호텔예약</a></li>
                 <li><a href="#">렌트카</a></li>
@@ -31,10 +26,5 @@
             </ul>
         </div>
     </header>
-    <div class="container">
-        <div class="con1">
-            slide
-        </div>
-    </div>
 </body>
 </html>
