--- a/03traval/index.html
+++ b/03traval/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">렌트카</a></li>
                 <li><a href="#">여행TIP</a></li>
                 <li><a href="#">회사소개</a></li>
-                <li><a href="#">커뮤니티</a></li>
+                <li><a href="#">커뮤니티1</a></li>
             </ul>
         </div>
     </header>
