--- a/03traval/index.html
+++ b/03traval/index.html
@@ -7,12 +7,20 @@
     <title>travel</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
         <div class="hdTop">
-            <h1><a href="#">로고</a></h1>
-            <div class="search">검색</div>
+            <h1><a href="#"><img src="images/LOGO.gif" alt=""></a></h1>
+            <div class="search">
+                <fieldset>
+                <label for="search">SEARCH</label>
+                <input type="text" id="text" name="text" placeholder="검색어를 입력하세요.">
+            </fieldset>
+            </div>
             <div class="util">유틸</div>
         </div>
         <div class="hdBtm">
