--- a/03traval/index.html
+++ b/03traval/index.html
@@ -7,13 +7,33 @@
     <title>travel</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
         <div class="hdTop">
-            <h1><a href="#">로고</a></h1>
-            <div class="search">검색</div>
-            <div class="util">유틸</div>
+            <h1><a href="#">
+                <img src="images/logo.png" alt="">
+            </a></h1>
+            <div class="search">
+                <fieldset>
+                <form action="#" method="POST">
+                    <label for="search" class="searchTitle">SEARCH</label>
+                    <input type="text" name="" class="searchArea" placeholder="검색어를 입력하세요.">
+                    <img src="images/search.png" alt="">
+                </form>
+            </fieldset>
+            </div>
+            <div class="util">
+                <ul>
+                    <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
+                    <li><a href="#"><img src="images/twiiter.png" alt=""></a></li>
+                    <li><a href="#"><img src="images/blog.png" alt=""></a></li>
+                    <li><a href="#"><img src="images/insta.png" alt=""></a></li>
+                </ul>
+            </div>
         </div>
         <div class="hdBtm">
             <ul class="clearfix">
@@ -26,5 +46,11 @@
             </ul>
         </div>
     </header>
+    <div class="Wrap">
+        <img src="images/01배경.jpg" alt="">
+        <div class="contents">
+            .
+        </div>
+    </div>
 </body>
 </html>
