--- a/03traval/index.html
+++ b/03traval/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,64 +9,64 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<<<<<<< HEAD
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-=======
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
->>>>>>> 90647fbc6b84aab0979b3d79cbc8e2dad8818182
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header id="header">
         <div class="hdTop">
-<<<<<<< HEAD
             <h1><a href="#">
-                <img src="images/logo.png" alt="">
-            </a></h1>
+                    <img src="images/logo.png" alt="">
+                </a></h1>
             <div class="search">
                 <fieldset>
-                <form action="#" method="POST">
-                    <label for="search" class="searchTitle">SEARCH</label>
-                    <input type="text" name="" class="searchArea" placeholder="검색어를 입력하세요.">
-                    <img src="images/search.png" alt="">
-                </form>
-            </fieldset>
+                    <form action="#" method="POST">
+                        <label for="search" class="searchTitle">SEARCH</label>
+                        <input type="text" name="" class="searchArea" placeholder="검색어를 입력하세요.">
+                        <img src="images/search.png" alt="">
+                    </form>
+                </fieldset>
             </div>
             <div class="util">
-                <ul>
+                <ul class="clearfix">
+                    <li>+82 02 1234 5678</li>
                     <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
                     <li><a href="#"><img src="images/twiiter.png" alt=""></a></li>
                     <li><a href="#"><img src="images/blog.png" alt=""></a></li>
                     <li><a href="#"><img src="images/insta.png" alt=""></a></li>
                 </ul>
             </div>
-=======
-            <h1><a href="#"><img src="images/LOGO.gif" alt=""></a></h1>
-            <div class="search">
-                <fieldset>
-                <label for="search">SEARCH</label>
-                <input type="text" id="text" name="text" placeholder="검색어를 입력하세요.">
-            </fieldset>
-            </div>
-            <div class="util">유틸</div>
->>>>>>> 90647fbc6b84aab0979b3d79cbc8e2dad8818182
         </div>
         <div class="hdBtm">
             <ul class="clearfix">
                 <li><a href="#">여행도시</a></li>
                 <li><a href="#">호텔예약</a></li>
                 <li><a href="#">렌트카</a></li>
-                <li><a href="#">여행TIP</a></li>
+                <li><a href="#">여행 TIP</a></li>
                 <li><a href="#">회사소개</a></li>
-                <li><a href="#">커뮤니티1</a></li>
+                <li><a href="#">커뮤니티</a></li>
             </ul>
         </div>
     </header>
     <div class="Wrap">
         <img src="images/01배경.jpg" alt="">
         <div class="contents">
-            .
+            <div class="reserv">
+                <ul>
+                    <li><a href="#">공항예약</a></li>
+                    <li><a href="#">호텔예약</a></li>
+                    <li><a href="#">렌트카</a></li>
+                    <li><a href="#">휴양지</a></li>
+                </ul>
+            </div>
+            <div class="txt">
+                TRAVEL GO <br>
+                지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!
+            </div>
         </div>
     </div>
 </body>
+
 </html>
