--- a/03traval/index.html
+++ b/03traval/index.html
@@ -65,6 +65,46 @@
                 TRAVEL GO <br>
                 지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!
             </div>
+            <form action="#" class="form">
+                <fieldset>
+                    <ul>
+                        <li>
+                            <label for="golo">가고싶은 나라를 선택하세요.</label>
+                            <select name="golo" id="golo">
+                                <option value="">선택하세요</option>
+                                <option value="미국">미국</option>
+                                <option value="영국">영국</option>
+                                <option value="노르웨이">노르웨이</option>
+                            </select>
+                        </li>
+                        <li>
+                            <div class="left">
+                                <label for="sdate">출발일</label>
+                                <input type="date" id="sdate">
+                            </div>
+                            <div class="right">
+                                <label for="edate">도착일</label>
+                                <input type="date" id="edate">
+                            </div>
+                        </li>
+                        <li>
+                            <div class="left">
+                                <label for="grade">좌석등급</label>
+                                <select name="grade" id="grade">
+                                    <option value="">선택</option>
+                                    <option value="">비즈니스</option>
+                                    <option value="">이코노미</option>
+                                </select>
+                            </div>
+                            <div class="right">
+                                <label for="grade">인원</label>
+                                <input type="number" id="num" placeholder="1">
+                            </div>
+                        </li>
+                    </ul>
+                </fieldset>
+                <input type="submit" value="검색하기">
+            </form>
         </div>
     </div>
 </body>
