--- a/03traval/index.html
+++ b/03traval/index.html
@@ -65,7 +65,7 @@
                 <fieldset>
                     <ul>
                         <li>
-                            <label for="golo">가고싶은 나라를 선택하세요.</label>
+                            <label for="golo">가고싶은 나라를 선택하세요.</label><br>
                             <select name="golo" id="golo">
                                 <option value="">선택하세요</option>
                                 <option value="미국">미국</option>
@@ -75,11 +75,11 @@
                         </li>
                         <li>
                             <div class="left">
-                                <label for="sdate">출발일</label>
+                                <label for="sdate">출발일</label><br>
                                 <input type="date" id="sdate">
                             </div>
                             <div class="right">
-                                <label for="edate">도착일</label>
+                                <label for="edate">도착일</label><br>
                                 <input type="date" id="edate">
                             </div>
                         </li>
