--- a/03traval/index.html
+++ b/03traval/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,14 +48,14 @@
                 <li><a href="#">호텔예약</a></li>
                 <li><a href="#">렌트카</a></li>
                 <li><a href="#">여행 TIP</a></li>
-                <li><a href="#">회사소개</a></li>
+                <li><a href="company.html">회사소개</a></li>
                 <li><a href="#">커뮤니티</a></li>
             </ul>
         </div>
     </header>
     <div class="Wrap">
         <img src="images/01배경.jpg" alt="">
-        <div class="contents">
+        <div class="contents clearfix">
             <div class="reserv">
                 <ul>
                     <li><a href="#">공항예약</a></li>
@@ -60,7 +63,6 @@
                     <li><a href="#">렌트카</a></li>
                     <li><a href="#">휴양지</a></li>
                 </ul>
-            </div>
             <form action="#" class="form">
                 <fieldset>
                     <ul>
@@ -99,11 +101,12 @@
                         </li>
                     </ul>
                 </fieldset>
-                <input type="submit" value="검색하기">
+                <input type="submit" value="검색하기" class="tourSearch">
             </form>
+        </div>
             <div class="txt">
-                TRAVEL GO <br>
-                지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!
+                TRAVEL <u>GO</u><br>
+                <div class="ko">지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</div>
             </div>
             
         </div>
