--- a/03traval/index.html
+++ b/03traval/index.html
@@ -108,7 +108,20 @@
                 TRAVEL <u>GO</u><br>
                 <div class="ko">지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</div>
             </div>
-            
+            <div class="tour1">
+                <div class="tourImg">
+                    <ul class="clearfix">
+                        <li><img src="images/03여행01.jpg" alt="">
+                            <div class="txt">프랑스&nbsp;&nbsp;&nbsp; <div class="num">\1,900,000~</div></div></li>
+                        <li><img src="images/03여행02.jpg" alt="">
+                            <div class="txt">일본&nbsp;&nbsp;&nbsp; <div class="num">\890,000</div></div></li>
+                    </ul>
+                </div>
+                <div class="balloon">
+                    <img src="images/02풍선.png" alt="">
+                </div>
+            </div>
+            <div class="tour2"></div>
         </div>
     </div>
 </body>
