--- a/03traval/index.html
+++ b/03traval/index.html
@@ -13,8 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/jquery.bxslider.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@600&display=swap" rel="stylesheet">
 <script>
     $(document).ready(function(){
         var myslide = $(".slider").bxSlider({
@@ -27,32 +33,35 @@
             myslide.goToPrevSlide();
         });
     });
+    
 </script>
 </head>
 
 <body>
     <header id="header">
-        <div class="hdTop">
-            <h1><a href="#">
-                    <img src="images/logo.png" alt="">
-                </a></h1>
-            <div class="search">
-                <fieldset>
-                    <form action="#" method="POST">
-                        <label for="search" class="searchTitle">SEARCH</label>
-                        <input type="text" name="" class="searchArea" placeholder="검색어를 입력하세요.">
-                        <img src="images/search.png" alt="">
-                    </form>
-                </fieldset>
-            </div>
-            <div class="util">
-                <ul class="clearfix">
-                    <li>+82 02 1234 5678</li>
-                    <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/twiiter.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/blog.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/insta.png" alt=""></a></li>
-                </ul>
+        <div class="hdTopWrap">
+            <div class="hdTop">
+                <h1><a href="#">
+                        <img src="images/logo.png" alt="">
+                    </a></h1>
+                <div class="search">
+                    <fieldset>
+                        <form action="#" method="POST">
+                            <label for="search" class="searchTitle">SEARCH</label>
+                            <input type="text" name="" class="searchArea" placeholder="검색어를 입력하세요.">
+                            <img src="images/search.png" alt="">
+                        </form>
+                    </fieldset>
+                </div>
+                <div class="util">
+                    <ul class="clearfix">
+                        <li>+82 02 1234 5678</li>
+                        <li><a href="#"><img src="images/facebook.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/twiiter.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/blog.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/insta.png" alt=""></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="hdBtm">
@@ -67,8 +76,7 @@
         </div>
     </header>
     <div class="Wrap">
-        <img src="images/01배경.jpg" alt="">
-        <div class="contents clearfix">
+        <div class="contents">
             <div class="reserv">
                 <ul>
                     <li><a href="#">공항예약</a></li>
@@ -76,76 +84,52 @@
                     <li><a href="#">렌트카</a></li>
                     <li><a href="#">휴양지</a></li>
                 </ul>
-            <form action="#" class="form">
-                <fieldset>
-                    <ul>
-                        <li>
-                            <label for="golo">가고싶은 나라를 선택하세요.</label><br>
-                            <select name="golo" id="golo">
-                                <option value="">선택하세요</option>
-                                <option value="미국">미국</option>
-                                <option value="영국">영국</option>
-                                <option value="노르웨이">노르웨이</option>
-                            </select>
-                        </li>
-                        <li>
-                            <div class="left">
-                                <label for="sdate">출발일</label><br>
-                                <input type="date" id="sdate">
-                            </div>
-                            <div class="right">
-                                <label for="edate">도착일</label><br>
-                                <input type="date" id="edate">
-                            </div>
-                        </li>
-                        <li>
-                            <div class="left">
-                                <label for="grade">좌석등급</label>
-                                <select name="grade" id="grade">
-                                    <option value="">선택</option>
-                                    <option value="">비즈니스</option>
-                                    <option value="">이코노미</option>
+                <form action="#" class="form">
+                    <fieldset>
+                        <ul>
+                            <li>
+                                <label for="golo">가고싶은 나라를 선택하세요.</label><br>
+                                <select name="golo" id="golo">
+                                    <option value="">선택하세요</option>
+                                    <option value="미국">미국</option>
+                                    <option value="영국">영국</option>
+                                    <option value="노르웨이">노르웨이</option>
                                 </select>
-                            </div>
-                            <div class="right">
-                                <label for="grade">인원</label>
-                                <input type="number" id="num" placeholder="1">
-                            </div>
-                        </li>
-                    </ul>
-                </fieldset>
-                <input type="submit" value="검색하기" class="tourSearch">
-            </form>
-        </div>
-            <div class="txt">
-                TRAVEL <u>GO</u><br>
-                <div class="ko">지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</div>
-            </div>
-            <div class="tour1">
-                <div class="tourImg">
-                    <ul class="clearfix">
-                        <li><img src="images/03여행01.jpg" alt="">
-                            <div class="txt">프랑스&nbsp;&nbsp;&nbsp; <div class="num">\1,900,000~</div></div></li>
-                        <li><img src="images/03여행02.jpg" alt="">
-                            <div class="txt">일본&nbsp;&nbsp;&nbsp; <div class="num">\890,000</div></div></li>
-                    </ul>
+                            </li>
+                            <li>
+                                <div class="left">
+                                    <label for="sdate">출발일</label><br>
+                                    <input type="date" id="sdate">
+                                </div>
+                                <div class="right">
+                                    <label for="edate">도착일</label><br>
+                                    <input type="date" id="edate">
+                                </div>
+                            </li>
+                            <li>
+                                <div class="left">
+                                    <label for="grade">좌석등급</label>
+                                    <select name="grade" id="grade">
+                                        <option value="">선택</option>
+                                        <option value="">비즈니스</option>
+                                        <option value="">이코노미</option>
+                                    </select>
+                                </div>
+                                <div class="right">
+                                    <label for="grade">인원</label>
+                                    <input type="number" id="num" placeholder="1">
+                                </div>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <input type="submit" value="검색하기" class="tourSearch">
+                </form>
+
                 </div>
-                <div class="balloon">
-                    <img src="images/02풍선.png" alt="">
-                </div>
             </div>
-                <div class="sliderWrap">
-                    <ul class="slider">
-                        <li><a href="#"><img src="images/03여행03.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="images/03여행04.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="images/03여행05.jpg" alt=""></a></li>
-                    </ul>
-                    <div class="nextBtn">
-                        <img src="images/btn_left.png" alt="">
-                    </div>
-                    <div class="preBtn">
-                        <img src="images/btn_right.png" alt="">
-                    </div>
+                <div class="txt">
+                    <div class="eng">TRAVEL <U>GO</U><br></div>
+                    <div class="ko">하이미디어와 여행을 떠나자!</div>
                 </div>
         </div>
     </div>
