--- a/03traval/index.html
+++ b/03traval/index.html
@@ -8,32 +8,37 @@
     <title>travel</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="../js/jquery-3.1.1.min.js"></script>
     <script src="../js/jquery.bxslider.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@700&display=swap" rel="stylesheet">
 <script>
     $(document).ready(function(){
-        var myslide = $(".slider").bxSlider({
-            controls:false
+        $(".reserv li:nth-child(1)").click(function(){
+            $(".resChoose").css({"background-color":"#fff"})
         });
-        $(".nextBtn").click(function(){
-            myslide.goToNextSlide();
+        $(".reserv li:nth-child(2)").click(function(){
+            $(".resChoose").css({"background-color":"#ddd"})
         });
-        $(".preBtn").click(function(){
-            myslide.goToPrevSlide();
+        $(".reserv li:nth-child(3)").click(function(){
+            $(".resChoose").css({"background-color":"#0f0"})
+        });
+        $(".reserv li:nth-child(4)").click(function(){
+            $(".resChoose").css({"background-color":"#2ee"})
+        });
+        $(".slider1").bxSlider({
+            controls:false,
+            pager:false
+        });
+        $(".slider2").bxSlider({
+            controls:false,
+            pager:false
         });
     });
-    
 </script>
 </head>
 
@@ -76,61 +81,112 @@
         </div>
     </header>
     <div class="Wrap">
-        <div class="contents">
-            <div class="reserv">
-                <ul>
-                    <li><a href="#">공항예약</a></li>
-                    <li><a href="#">호텔예약</a></li>
-                    <li><a href="#">렌트카</a></li>
-                    <li><a href="#">휴양지</a></li>
-                </ul>
-                <form action="#" class="form">
-                    <fieldset>
-                        <ul>
-                            <li>
-                                <label for="golo">가고싶은 나라를 선택하세요.</label><br>
-                                <select name="golo" id="golo">
-                                    <option value="">선택하세요</option>
-                                    <option value="미국">미국</option>
-                                    <option value="영국">영국</option>
-                                    <option value="노르웨이">노르웨이</option>
-                                </select>
-                            </li>
-                            <li>
-                                <div class="left">
-                                    <label for="sdate">출발일</label><br>
-                                    <input type="date" id="sdate">
-                                </div>
-                                <div class="right">
-                                    <label for="edate">도착일</label><br>
-                                    <input type="date" id="edate">
-                                </div>
-                            </li>
-                            <li>
-                                <div class="left">
-                                    <label for="grade">좌석등급</label>
-                                    <select name="grade" id="grade">
-                                        <option value="">선택</option>
-                                        <option value="">비즈니스</option>
-                                        <option value="">이코노미</option>
-                                    </select>
-                                </div>
-                                <div class="right">
-                                    <label for="grade">인원</label>
-                                    <input type="number" id="num" placeholder="1">
-                                </div>
-                            </li>
-                        </ul>
-                    </fieldset>
-                    <input type="submit" value="검색하기" class="tourSearch">
-                </form>
-
+        <div class="contentBox">
+            <div class="TopLeftcon">
+                <div class="reserv">
+                    <ul>
+                        <li><a href="#"><i class="fas fa-plane"></i>공항예약</a></li>
+                        <li><a href="#"><i class="fas fa-hotel"></i>호텔예약</a></li>
+                        <li><a href="#"><i class="fas fa-car"></i>렌트카</a></li>
+                        <li><a href="#"><i class="fas fa-umbrella-beach"></i>휴양지</a></li>
+                    </ul>
+                    <div class="resChoose">
+                        <form action="#">
+                            <fieldset>
+                                <ul>
+                                    <li>
+                                        <label>가고싶은 나라를 선택하세요.</label><br>
+                                        <select name="country" id="country">
+                                            <option value="">선택하세요</option>
+                                            <option value="ko">한국</option>
+                                            <option value="us">미국</option>
+                                            <option value="ca">캐나다</option>
+                                        </select>
+                                    </li>
+                                    <li>
+                                      <label for="sdate">출발일</label>
+                                      <input type="date">
+                                      <label for="edate">도착일</label>
+                                      <input type="date">
+                                    </li>
+                                    <li>
+                                        <label for="seat">좌석등급</label>
+                                        <select name="seat" id="seat">
+                                            <option value="aseat">일반석</option>
+                                            <option value="bseat">비즈니스석</option>
+                                            <option value="cseat">일등석</option>
+                                        </select>
+                                        <label for="adult">성인</label>
+                                        <input type="number" placeholder="1">
+                                        <label for="kids">아이</label>
+                                        <input type="number" placeholder="2">
+                                    </li>
+                                </ul>
+                                <button type="button"><i class="fas fa-search"></i>검색하기</button>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+                <div class="saletour">
+                    <ul>
+                        <li>
+                            <img src="images/03travel01.jpg" alt="">
+                            <div class="txt">
+                                <div class="ko">프랑스</div>
+                                <div class="num">\1,900,000~<i class="fas fa-chevron-right"></i></div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/03travel02.jpg" alt="">
+                            <div class="txt">
+                                <div class="ko">일본</div>
+                                <div class="num">\890,000~<i class="fas fa-chevron-right"></i></div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
-                <div class="txt">
-                    <div class="eng">TRAVEL <U>GO</U><br></div>
-                    <div class="ko">하이미디어와 여행을 떠나자!</div>
+            <div class="TopRightcon">
+                <div class="mainTxt">
+                    <div class="eng">TRAVEL <u>GO</u></div>
+                    <div class="ko">지금, 여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</div>
                 </div>
+            </div>
+        </div>
+        <div class="content2">
+                <ul class="slider1">
+                    <li>
+                        <img src="images/03travel03.jpg" alt="">
+                        <div class="txt">HILLTON HOTEL (PARIS)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    </li>
+                    <li>
+                        <img src="images/03travel04.jpg" alt="">
+                        <div class="txt">관광명소(디즈니랜드)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    </li>
+                </ul>
+                <ul class="slider1">
+                    <li>
+                        <img src="images/03travel03.jpg" alt="">
+                        <div class="txt">HILLTON HOTEL (PARIS)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    </li>
+                    <li>
+                        <img src="images/03travel04.jpg" alt="">
+                        <div class="txt">관광명소(디즈니랜드)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="weather">
+                        <span>TOKYO</span>
+                        <img src="images/03travel05.jpg" alt="">
+                        <div class="txt">20℃ 구름조금 <br><div class="min">습도 60% 바람 남남동 2㎧</div></div>
+                    </li>
+                    <li class="snstour">
+                        <span class="ko">"해외여행은 처음이었는데,<br>하이미디어여행 덕분에 무사히<br>다녀올 수 있었어요."</span>
+                        <span class="fran">프랑스 파리 자유여행</span>
+                        <img src="images/03travel06.jpg" alt="">
+                        <div class="txt">facebook 여행후기<br><div class="min">(임정희님)</div></div>
+                    </li>
+                </ul>
         </div>
     </div>
 </body>
