--- a/03traval/index.html
+++ b/03traval/index.html
@@ -154,6 +154,7 @@
             </div>
         </div>
         <div class="content2">
+            <div class="slider">
                 <ul class="slider1">
                     <li>
                         <img src="images/03travel03.jpg" alt="">
@@ -187,6 +188,7 @@
                         <div class="txt">facebook 여행후기<br><div class="min">(임정희님)</div></div>
                     </li>
                 </ul>
+            </div>    
         </div>
     </div>
 </body>
