--- a/03traval/index.html
+++ b/03traval/index.html
@@ -78,7 +78,7 @@
     <div class="Wrap">
         <div class="contents">
             <div class="reserv">
-                <ul>
+                <ul class="check">
                     <li><a href="#">공항예약</a></li>
                     <li><a href="#">호텔예약</a></li>
                     <li><a href="#">렌트카</a></li>
@@ -127,9 +127,11 @@
 
                 </div>
             </div>
-                <div class="txt">
+                <div class="txtArea">
+                    <div class="txt">
                     <div class="eng">TRAVEL <U>GO</U><br></div>
                     <div class="ko">하이미디어와 여행을 떠나자!</div>
+                </div>
                 </div>
         </div>
     </div>
