--- a/03traval/index.html
+++ b/03traval/index.html
@@ -38,6 +38,14 @@
             controls:false,
             pager:false
         });
+        $(".slide3").bxSlider({
+            controls:true,
+            pager:false
+        });
+        $(".slide4").bxSlider({
+            controls:true,
+            pager:false
+        });
     });
 </script>
 </head>
@@ -81,7 +89,7 @@
         </div>
     </header>
     <div class="Wrap">
-        <div class="contentBox">
+        <div class="contentBox clearfix">
             <div class="TopLeftcon">
                 <div class="reserv">
                     <ul>
@@ -154,41 +162,47 @@
             </div>
         </div>
         <div class="content2">
-            <div class="slider">
-                <ul class="slider1">
+           <ul class="clearfix">
+               <li>
+                   <ul class="slide3 clearfix">
+                       <li>
+                           <img src="images/03travel03.jpg" alt="">
+                           <div class="txt">
+                               HILLTON HOTEL (PARIS)
+                           </div>
+                       </li>
+                       <li>
+                           <img src="images/03travel04.jpg" alt="">
+                           <div class="txt">
+                            HILLTON HOTEL (PARIS)
+                        </div>
+                       </li>
+                       <li>
+                           <img src="images/03travel05.jpg" alt="">
+                           <div class="txt">
+                            HILLTON HOTEL (PARIS)
+                        </div>
+                       </li>
+                   </ul>
+               </li>
+               <li>
+                <ul class="slide4">
                     <li>
                         <img src="images/03travel03.jpg" alt="">
-                        <div class="txt">HILLTON HOTEL (PARIS)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     </li>
                     <li>
                         <img src="images/03travel04.jpg" alt="">
-                        <div class="txt">관광명소(디즈니랜드)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                    </li>
-                </ul>
-                <ul class="slider1">
-                    <li>
-                        <img src="images/03travel03.jpg" alt="">
-                        <div class="txt">HILLTON HOTEL (PARIS)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     </li>
                     <li>
-                        <img src="images/03travel04.jpg" alt="">
-                        <div class="txt">관광명소(디즈니랜드)<br><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="weather">
-                        <span>TOKYO</span>
                         <img src="images/03travel05.jpg" alt="">
-                        <div class="txt">20℃ 구름조금 <br><div class="min">습도 60% 바람 남남동 2㎧</div></div>
-                    </li>
-                    <li class="snstour">
-                        <span class="ko">"해외여행은 처음이었는데,<br>하이미디어여행 덕분에 무사히<br>다녀올 수 있었어요."</span>
-                        <span class="fran">프랑스 파리 자유여행</span>
-                        <img src="images/03travel06.jpg" alt="">
-                        <div class="txt">facebook 여행후기<br><div class="min">(임정희님)</div></div>
                     </li>
                 </ul>
-            </div>    
+               </li>
+               <li>
+                   
+               </li>
+               <li></li>
+           </ul>   
         </div>
     </div>
 </body>
