--- a/03traval/index.html
+++ b/03traval/index.html
@@ -189,19 +189,30 @@
                 <ul class="slide4">
                     <li>
                         <img src="images/03travel03.jpg" alt="">
+                        <div class="txt">
+                            관광명소(디즈니랜드)
+                        </div>
                     </li>
                     <li>
                         <img src="images/03travel04.jpg" alt="">
+                        <div class="txt">
+                            관광명소(디즈니랜드)
+                        </div>
                     </li>
                     <li>
                         <img src="images/03travel05.jpg" alt="">
+                        <div class="txt">
+                            관광명소(디즈니랜드)
+                        </div>
                     </li>
                 </ul>
                </li>
                <li>
-                   
+                 <img src="images/03travel05.jpg" alt="">  
                </li>
-               <li></li>
+               <li>
+                   <img src="images/03travel06.jpg" alt="">
+               </li>
            </ul>   
         </div>
     </div>
