--- a/03traval/index.html
+++ b/03traval/index.html
@@ -208,10 +208,23 @@
                 </ul>
                </li>
                <li>
-                 <img src="images/03travel05.jpg" alt="">  
+                 <img src="images/03travel05.jpg" alt="">
+                 <div class="txt">
+                     <span>TOKYO</span>
+                    20℃ 구름조금 <br>
+                    <div class="small">습도 60% 바람 남남동 2㎧</div>
+                </div>  
                </li>
                <li>
                    <img src="images/03travel06.jpg" alt="">
+                   <div class="txt">
+                    <span>"해외여행은 처음이었는데, <br>
+                        하이미디어여행 덕분에 무사히<br>
+                        다녀올 수 있었어요.""
+                    </span>
+                    facebook 여행후기 <br>
+                    <div class="small">(임정희님)</div>
+                </div>
                </li>
            </ul>   
         </div>
