--- a/03traval/index.html
+++ b/03traval/index.html
@@ -228,6 +228,22 @@
                </li>
            </ul>   
         </div>
+        <div class="content3">
+          <ul>
+              <li><a href="#">
+                  <img src="images/03travel07.jpg" alt="">
+              </a></li>
+              <li><a href="#">
+                  <img src="images/03travel08.jpg" alt="">
+              </a></li>
+              <li><a href="#">
+                  <img src="images/03travel09.jpg" alt="">
+              </a></li>
+              <li><a href="#">
+                  <img src="images/03travel10.jpg" alt="">
+              </a></li>
+          </ul>  
+        </div>
     </div>
 </body>
 
