--- a/03traval/index.html
+++ b/03traval/index.html
@@ -229,7 +229,7 @@
            </ul>   
         </div>
         <div class="content3">
-          <ul>
+          <ul class="clearfix">
               <li><a href="#">
                   <img src="images/03travel07.jpg" alt="">
               </a></li>
