--- a/04company/index.html
+++ b/04company/index.html
@@ -49,6 +49,23 @@
                     </div>
                 </li>
             </ul>
+            <img src="images/next_btn.png" alt="" class="nextBtn">
+            <img src="images/prev_btn.png" alt="" class="prevBtn">
+        </div>
+        <div class="content">
+            <ul class="clearfix">
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#">6</a></li>
+                <li><a href="#">7</a></li>
+                <li><a href="#">8</a></li>
+                <li><a href="#">9</a></li>
+                <li><a href="#">10</a></li>
+                <li><a href="#">11</a></li>
+            </ul>
         </div>
     </header>
 </body>
