--- a/04company/index.html
+++ b/04company/index.html
@@ -54,11 +54,24 @@
         </div>
         <div class="content">
             <ul class="clearfix">
-                <li><a href="#">1</a></li>
+                <li><a href="#">
+                    <div class="icon">
+                        <img src="images/icon01_01.png" alt="">
+                        <h3>text</h3>
+                    </div>
+                </a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
+                <li><a href="#"> 
+                    <div class="icon">
+                    <img src="images/icon01_02.png" alt="">
+                    <h3>text</h3>
+                </div></a></li>
+                <li><a href="#"> 
+                    <div class="icon">
+                    <img src="images/icon01_03.png" alt="">
+                    <h3>text</h3>
+                </div></a></li>
                 <li><a href="#">6</a></li>
                 <li><a href="#">7</a></li>
                 <li><a href="#">8</a></li>
