--- a/04company/index.html
+++ b/04company/index.html
@@ -61,7 +61,33 @@
                     </div>
                 </a></li>
                 <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
+                <li>
+                    <div class="slider2Wrap">
+                        <ul class="slider2">
+                            <li class="s2list clearfix">
+                                <div class="left">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, architecto?
+                                </div>
+                                <div class="right">
+                                    <img src="images/img01_02.jpg" alt="">
+                                </div>
+                            </li>
+                            <li class="s2list clearfix">
+                                <div class="left">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, architecto?
+                                </div>
+                                <div class="right">
+                                    <img src="images/img01_02.jpg" alt="">
+                                </div>
+                            </li>
+                        </ul>
+                        <h2>NEWS</h2>
+                        <div class="btn">
+                            <img src="images/btn01_01.jpg" alt="" class="prevBtn">
+                            <img src="images/btn01_02.jpg" alt="" class="nextBtn">
+                        </div>
+                    </div>
+                </li>
                 <li><a href="#"> 
                     <div class="icon">
                     <img src="images/icon01_02.png" alt="">
